[package]
name = "tntw"
version = "0.1.0"
authors = ["Joel Gibson <jmr.gibson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1" 
bevy_input = "0.2.1"
bevy_rapier2d = "0.2.0"
env_logger = "0.7"
itertools = "0.9"
log = "0.4" 